<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">
    <EditText
        android:id="@+id/activity_register_name"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name"
        android:inputType="textPersonName"
        android:layout_margin="5dp" />
    <EditText
        android:id="@+id/activity_register_email"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:layout_margin="5dp" />
    <EditText
        android:id="@+id/activity_register_phone"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_phone"
        android:inputType="phone"
        android:layout_margin="5dp" />
    <EditText
        android:id="@+id/activity_register_pass"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:layout_margin="5dp" />
    <EditText
        android:id="@+id/activity_register_pass_confirm"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_confirm_password"
        android:inputType="textPassword"
        android:layout_margin="5dp" />
    <Button
        android:id="@+id/activity_register_picture"
        android:text="@string/btn_upload_picture"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" />
    <Button
        android:id="@+id/activity_register_create"
        android:text="@string/btn_create_account"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" />
</LinearLayout>