<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/main_img"/>

    <EditText

        android:id="@+id/activity_login_email"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp" />

    <EditText
        android:id="@+id/activity_login_password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/hint_password"
        android:layout_marginBottom="30dp" />

    <Button
        android:id="@+id/activity_login_btnlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_login"
        android:layout_marginBottom="20dp" />

    <Button
        android:id="@+id/activity_login_btnregister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_register"
        android:layout_marginBottom="44dp" />
</LinearLayout>